SERVER-15560 Multiple logComponentVerbosity levels cannot be cleared